Export csv file added

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -130,6 +130,7 @@
       .data-table td {
         padding: 12px;
         border-bottom: 1px solid #eee;
+        color: #333;
       }
 
       .data-table tr:hover {
